--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "aioha",
   "version": "0.0.1",
   "description": "All-In-One Hive Authentication API",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "build/index.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "build": "tsc",
     "webpack": "webpack",
