show official hivesigner popup if not within auth scope

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hiveio/dhive": "^1.2.8",
     "assert": "^2.1.0",
     "crypto-js": "^4.2.0",
+    "hive-uri": "^0.2.5",
     "hivesigner": "^3.3.4",
     "keychain-sdk": "^0.6.1",
     "uuid": "^9.0.1"
