--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
-  "name": "aioha",
-  "version": "0.0.1",
+  "name": "@aioha/aioha",
+  "version": "1.0.0",
   "description": "All-In-One Hive Authentication API",
   "main": "build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
     "build": "tsc",
     "webpack": "webpack",
+    "clean": "rm -r dist/*.js dist/*.txt build/*",
+    "prepublish": "pnpm run build; pnpm run webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "aioha",
+    "hive",
+    "blockchain",
+    "authentication"
+  ],
+  "author": "techcoderx",
+  "license": "MIT",
+  "files": [
+    "src",
+    "dist",
+    "build",
+    "LICENSE",
+    "README.md"
+  ],
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/uuid": "^9.0.8",
