--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aioha/aioha",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "All-In-One Hive Authentication API",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -48,6 +48,7 @@
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
+    "hive-tx": "^5.4.3",
     "hive-uri": "^0.2.5",
     "hivesigner": "^3.3.4",
     "keychain-sdk": "^0.6.1"
