--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aioha/aioha",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "All-In-One Hive Authentication API",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -8,7 +8,7 @@
     "build": "tsc",
     "webpack": "webpack",
     "clean": "rm -r dist/* build/*",
-    "prepublish": "pnpm run clean; pnpm run build; pnpm run webpack",
+    "prepublish": "pnpm run clean; pnpm run build; pnpm run webpack; cp src/lib/hivesigner-cb.ts dist/hivesigner-cb.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
