--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aioha/aioha",
-  "version": "1.5.6",
+  "version": "1.6.0",
   "description": "All-In-One Hive Authentication API",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -39,14 +39,14 @@
     "buffer": "^6.0.3",
     "ts-loader": "^9.5.2",
     "typescript": "^5.7.3",
-    "webpack": "^5.97.1",
+    "webpack": "^5.98.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@aioha/tx-digest": "^1.0.0",
     "@engrave/ledger-app-hive": "^3.5.6",
     "@hiveio/dhive": "^1.3.2",
     "@ledgerhq/hw-transport-webusb": "^6.29.4",
-    "hive-tx": "^6.0.4",
     "js-md5": "^0.8.3",
     "keychain-sdk": "^0.6.2"
   }
