--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aioha/aioha",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "description": "All-In-One Hive Authentication API",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -45,9 +45,9 @@
   },
   "dependencies": {
     "@aioha/tx-digest": "^1.0.2",
-    "@engrave/ledger-app-hive": "^3.5.6",
+    "@aioha/ledger-app-hive": "^0.0.1",
     "@hiveio/dhive": "^1.3.2",
-    "@ledgerhq/hw-transport-webusb": "^6.29.4",
+    "@ledgerhq/hw-transport-webusb": "^6.29.7",
     "js-md5": "^0.8.3",
     "keychain-sdk": "^0.9.1"
   }
