--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aioha/aioha",
-  "version": "1.6.1",
+  "version": "1.7.0",
   "description": "All-In-One Hive Authentication API",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -46,6 +46,7 @@
   "dependencies": {
     "@aioha/ledger-app-hive": "^0.0.2",
     "@hiveio/dhive": "^1.3.2",
+    "@hiveio/wax": "1.27.6-rc10",
     "@ledgerhq/hw-transport-webusb": "^6.29.7",
     "js-md5": "^0.8.3"
   }
