--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
   },
   "dependencies": {
     "@aioha/ledger-app-hive": "^0.0.2",
+    "@aioha/tx-digest": "^2.0.0",
     "@hiveio/dhive": "^1.3.2",
     "@hiveio/wax": "1.27.11-rc0",
     "@ledgerhq/hw-transport-webusb": "^6.29.7",
+    "@metamask/providers": "^22.1.1",
     "js-md5": "^0.8.3"
   }
 }
